# Cocofile

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NEXT.md  README.md  SETUP.md  check-status.sh  package.json  tauri.conf.json  test_backend.sh  test_performance.sh
docs/: API_REFERENCE.md  BACKEND_IMPLEMENTATION.md  BACKEND_ORCHESTRATOR_FINAL_REPORT.md  BETA_TESTER_RECRUITMENT.md  BETA_TEST_GUIDE.md  FAQ.md  FRONTEND_COMPLETION_REPORT.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_STEPS.md  GUI_TEST_CHECKLIST.md  GUI_TEST_GUIDE.md  HANDOFF_2025-11-07.md  HANDOFF_TO_NEXT_PHASE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE.md  INTEGRATION_TEST_REPORT.md  MVP_100_COMPLETION.md  NEXT_STEPS.md  NEXT_STEPS_AFTER_PHASE7.md  PHASE11_COMPLETION_SUMMARY.md  PHASE11_PLAN.md  PHASE12_PLAN.md  PHASE13_PLAN.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_FILE_ORGANIZATION_DESIGN.md  PHASE6_CONTINUATION_GUIDE.md  PHASE7_COMPLETION_REPORT.md  PHASE7_COMPLETION_SUMMARY.md  PHASE9_COMPLETION_SUMMARY.md  PHASE9_TEST_REPORT.md  PROJECT_STATE_SNAPSHOT.md  PROJECT_STATUS.md  PYTHON_SETUP.md  QUALITY_ASSURANCE_REPORT.md  QUICK_START_TEST.md  QUICK_START_WINDOWS.md  RELEASE_COMPLETED.md  RELEASE_NOTES_v0.1.0.md  (+12 more)
frontend/: package-lock.json  package.json  src-tauri  tsconfig.app.json
src-tauri/: Cargo.toml  cocofile.desktop  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  favorite_manager.rs  file_scanner.rs  lib.rs  logger.rs  main.rs  organization_manager.rs  python_bridge.rs  settings_manager.rs  tag_manager.rs
(+61 files in other folders)
