[package]
name = "cocofile"
version = "0.1.0"
description = "CocoFile - ファイル管理アシスタント"
authors = ["muranaka-tenma"]
edition = "2021"

[lib]
name = "cocofile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
